Add tests :rocket:
- setup ava powered tests
- tweaking npm tarball contents

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,12 +3,8 @@
 	"compilerOptions": {
 		"incremental": true,
 		"outDir": "dist",
-        "target": "esnext",
-        "lib": [
-            "dom"
-        ]
+		"target": "esnext",
+		"lib": ["dom"]
 	},
-	"include": [
-		"source"
-	]
+	"include": ["source"]
 }
