--- a/package.json
+++ b/package.json
@@ -2,14 +2,20 @@
 	"name": "is-dnt",
 	"version": "1.0.0",
 	"description": "Check whether the Do not track (DNT) policy is enabled in user's browser or not",
-	"main": "dist",
+	"main": "dist/index.js",
+	"types": "dist/index.d.ts",
+	"files": [
+		"dist/index.js",
+		"dist/index.js.map",
+		"dist/index.d.ts"
+	],
 	"author": "Antoni Kepinski <a@kepinski.me> (https://kepinski.me)",
 	"bugs": {
 		"url": "https://github.com/xxczaki/is-dnt/issues"
 	},
 	"scripts": {
 		"build": "del dist && tsc",
-		"test": "xo && npm run build",
+		"test": "xo && npm run build && ava",
 		"prepublishOnly": "npm run build"
 	},
 	"engines": {
@@ -22,12 +28,13 @@
 		"@akepinski/tsconfig": "0.0.2",
 		"@typescript-eslint/eslint-plugin": "^1.10.2",
 		"@typescript-eslint/parser": "^1.10.2",
+		"ava": "^2.1.0",
+		"browser-env": "^3.2.6",
 		"del-cli": "^2.0.0",
-		"eslint-config-xo-typescript": "^0.14.0",
+		"eslint-config-xo-typescript": "^0.15.0",
 		"typescript": "^3.5.1",
 		"xo": "*"
 	},
-	"types": "dist",
 	"sideEffects": false,
 	"xo": {
 		"extends": "xo-typescript",
