--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,10 +1,13 @@
 {
 	"extends": "@akepinski/tsconfig",
 	"compilerOptions": {
-		"incremental": true,
 		"outDir": "dist",
-		"target": "esnext",
-		"lib": ["dom"]
+		"target": "es5",
+		"sourceMap": false,
+		"incremental": false,
+		"lib": ["dom"],
 	},
-	"include": ["source"]
+	"include": [
+		"src/**/*"
+	]
 }
